--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^2.11.14",
     "mocha": "^3.1.2",
     "nyc": "^8.3.1",
     "rimraf": "^2.5.4",
