--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "pretest": "tsc",
     "test": "nyc mocha",
-    "coverage": "nyc report --reporter=html",
-    "postinstall": "typings install && tsc"
+    "coverage": "nyc report --reporter=html"
   },
   "keywords": [
     "linq",
@@ -25,12 +24,14 @@
     "typescript": "^2.0.3"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.46",
     "chai": "^3.5.0",
     "coveralls": "^2.11.14",
     "mocha": "^3.1.2",
     "nyc": "^8.3.1",
     "rimraf": "^2.5.4",
-    "tslint": "^3.15.1",
-    "typings": "^1.4.0"
+    "tslint": "^3.15.1"
   }
 }
